# common

./: CHANGELOG.md  Cargo.toml  GUIDELINES.md  MESSAGE_DIAGRAMS.md  README.md  common.code-workspace  justfile  rust-toolchain.toml
.devcontainer/: compose.yaml  devcontainer.json  docker-compose.yaml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  docs.yaml  image-dev.yaml  release.yaml
app/: diagrams.md
app/game/: Cargo.toml  MESSAGE_DIAGRAMS.md  message_diagrams.md
app/game/src/: components.rs  lib.rs  logging.rs  main.rs  protocols.rs  utils.rs
app/game/src/components/: asteroid.rs  energy_cell.rs  forge.rs  generator.rs  planet.rs  resource.rs  rocket.rs  sunray.rs
app/game/src/protocols/: messages.rs  orchestrator.rs  orchestrator_explorer.rs  orchestrator_planet.rs  planet_explorer.rs
docker/: dev.Dockerfile
ops/apt/: base.txt  common.txt
