[package]
name = "common-game"
description = "A package for the 2025 Group Project of the course of Advanced Programming at the University of Trento"
documentation = "https://unitn-ap-2025.github.io/common-docs/common_game"
edition = "2024"
license = "MIT"
repository = "https://github.com/unitn-ap-2025/common"
version = "3.0.0"

[lib]
path = "src/lib.rs"

[dependencies]
paste = "1.0.15"
log = "0.4"
lazy_static = "1.5.0"
crossbeam-channel = "0.5.15"
enum-as-inner = "0.6.1"
strum = "0.27.2"
strum_macros = "0.27.2"
